Remove version constraints for transformers and accelerate in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ sentence-transformers>=2.2.2
 faiss-cpu>=1.7.4
 numpy>=1.24.0
 torch>=2.6
-transformers>=4.40.0
-accelerate>=0.24.0
+transformers
+accelerate
 django>=5.0.1
 django-cors-headers>=4.3.1
